--- a/style.css
+++ b/style.css
@@ -16,6 +16,15 @@ h1{
     font-size: 30px;
    
 }
+.extrakaryr{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #08206e;
+    font-size: 20px;
+    margin-left :25% ;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 .navbar {
     display: flex;
     position: sticky;
@@ -275,7 +284,7 @@ cursor: pointer;
         /* background-color: aliceblue; */
         /* background-color: #f70000; */
 
-        background-color: #0ea70e6b;
+        background-color: #1611af;
         
        
 
@@ -284,14 +293,14 @@ cursor: pointer;
         display: flex;
         justify-content: center;
               font-size: 50px;
-              color: #0e0364;
+              color: #ffffff;
              font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
      } 
 
 
 
 .naming-2{
-    color: #1401a0;
+    color: #ffffff;
     display: flex;
     justify-content: center;
     font-size: 30px;
@@ -299,23 +308,23 @@ cursor: pointer;
 
 
 .client1{
-    height: 300px;
+    height: 400px;
     width: 350px;;
     border:1px solid  #000;
-    box-shadow: 2px 2px 15px rgb(255, 0, 0);
+    box-shadow: 2px 2px 15px rgb(56, 52, 52);
    
 }
 .client2{
-    height: 300px;
+    height: 400px;
     width: 350px;;
     border:1px solid  #000;
-    box-shadow: 2px 2px 15px rgb(255, 0, 0);
+    box-shadow: 2px 2px 15px rgb(42, 39, 39);
 }
 .client3{
-    height: 300px;
+    height: 400px;
     width: 350px;;
     border:1px solid  #000;
-    box-shadow: 2px 2px 15px rgb(255, 0, 0);
+    box-shadow: 2px 2px 15px rgb(43, 41, 41);
  
 }
 
@@ -334,7 +343,7 @@ cursor: pointer;
         object-fit: cover;
         margin-bottom: 10px;
        margin-left: 70px;
-   
+   border: 7px solid yellow;
 }
 .path2{
    
@@ -345,6 +354,7 @@ cursor: pointer;
     object-fit: cover;
     margin-bottom: 10px;
    margin-left: 70px;
+   border: 7px solid yellow;
 
 }
 
@@ -357,13 +367,13 @@ cursor: pointer;
     object-fit: cover;
     margin-bottom: 10px;
    margin-left: 70px;
-
+   border: 7px solid yellow;
 }
 
 
 .nam{
     margin-left: 40%;
-    color: #0e036465;
+    color: #ffffff;
     font-size: 40px;
 
 }
@@ -522,7 +532,7 @@ label {
 label {
     display: block;
     margin-bottom: 5px;
-    color: #001f3f; /* Dark text for labels */
+    color: #ffffff; /* Dark text for labels */
 }
 
 .input-funny-name,
@@ -641,4 +651,34 @@ label {
 
 .footer-text-funny {
     color: #001f3f; /* Dark blue text for footer */
+}
+
+
+.nam1{
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+    color: yellow;
+}
+
+
+.nam2{
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+    color: yellow;
+}
+
+
+.nam3{
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+    color: yellow;
 }
